# vtherm_api

./: .gitignore  DEVELOPMENT.md  README.md  publish.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/agents/: vtherm.agent.md
documentation/en/: api-reference.md  architecture.md  events.md  getting-started.md  index.md  overview.md  testing.md
documentation/en/guides/: feature-manager.md  forward-actions.md  listen-to-events.md  proportional-algorithm.md  register-integration.md
src/vtherm_api/: __init__.py  commons_type.py  const.py  interfaces.py  log_collector.py  plugin_climate.py  vtherm_api.py
tests/: conftest.py  test_log_collector.py  test_log_download_endpoint.py  test_package.py  test_plugin_climate.py  test_plugin_feature_manager.py  test_prop_algorithm_registry.py
