[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtherm_api"
version = "0.1.0"
description = "The API of the Versatile Thermostat integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Jean-Marc Collin" },
]
keywords = ["home-assistant", "thermostat", "hvac", "versatile-thermostat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
# Work !
line-length = 180